tests/errors/syntax.UnterminatedString.2.res
>> Syntax | File: syntax.UnterminatedString.2.art
    error | Line: 4
          | 
          | unterminated string
          | 
          | near: this "something else
          |             ^